# original-projects

./: .gitignore  README.md
algorithms/: CMakeLists.txt
algorithms/cli_app/: CMakeLists.txt
algorithms/cli_app/src/: cli_main.cpp
algorithms/searching/: CMakeLists.txt
algorithms/searching/src/: search.cpp  search_helper.cpp
algorithms/sorting/: CMakeLists.txt
algorithms/sorting/include/sorting/: sort.h  sort_helper.h
algorithms/sorting/src/: sort.cpp  sort_helper.cpp
perception/: CMakeLists.txt
perception/src/: main.cpp
